# test_app_ProfIT

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
currency/: .env_save  api.py
currency/alembic/: env.py
currency/alembic/versions/: 6f5582959675_add_user_model.py
currency/db/: base.py  deps.py  session.py
currency/settings/: jwt_settings.py  settings.py
currency/src/auth/: api.py  exceptions.py  models.py  schemas.py  services.py
currency/src/parser/: main.py  schemas.py  services.py  utils.py
currency/src/routes/: api.py  tags.py
